--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="d-flex">
+            <h1>Gioco dei dadi</h1>
+            <p id="punteggio">0 - 0</p>
+            <div class="d-flex-row">
+                <div class="dado"></div>
+                <div class="dado"></div>
+            </div>
+            <p id="risultato">hai vinto</p>
+            <button id="gioca">Gioca</button>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
