fine (manca l'array per i punteggi)

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="d-flex">
             <h1>Gioco dei dadi</h1>
             <div id="punteggio d-flex-row">
-                <span id="vinto">1</span>
+                <span id="playerPoints">1</span>
                  - 
-                <span id="perso">1</span>
+                <span id="cpuPoints">1</span>
             </div>
             <div class="d-flex-row">
                 <div>
@@ -27,7 +27,7 @@
                 </div>    
             </div>
             <div class="risultati" id="risultato"></div>
-            <button onclick="gioca(); imgdice();" id="gioca">Gioca</button>
+            <button onclick="gioca();" id="gioca">Gioca</button>
         </div>
     </main>
     <script src="script.js"></script>
