conteggio punteggi dei dadi

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -12,9 +12,9 @@
         <div class="d-flex">
             <h1>Gioco dei dadi</h1>
             <div id="punteggio d-flex-row">
-                <span id="playerPoints">1</span>
+                <span id="playerPoints"></span>
                  - 
-                <span id="cpuPoints">1</span>
+                <span id="cpuPoints"></span>
             </div>
             <div class="d-flex-row">
                 <div>
